Update2.0 exemplo.yaml

--- a/.github/workflows/exemplo.yaml
+++ b/.github/workflows/exemplo.yaml
@@ -9,7 +9,7 @@ jobs:
       - run: echo "${{ runner.os }}"
 
       # Qual evento iniciou o workflow?
-      - run: echo "{{ github.event_name }} evento"
+      - run: echo "${{ github.event_name }} evento"
 
       # Qual repositorio e workflow
-      - run:  echo "{{ github.ref }}  repo ${{ github.repository }}"
+      - run:  echo "${{ github.ref }}  repo ${{ github.repository }}"
